testsuite/tests/parser/should_compile/read055.hs

{-# LANGUAGE ParallelListComp #-}

module Foo where

foo = [ ()
      | () <- foo
      | () <- foo
      ]

