testsuite/tests/parser/should_fail/readFailTraditionalRecords2.hs

{-# LANGUAGE NoTraditionalRecordSyntax #-}

module ReadFailTraditionalRecords2 where

f (Foo { i = j }) = j

